Welcome Page Changes Landing Page almost complete

--- a/frontend/src/Javascript_Pages/Public_Pages/WelcomePageElements/CSS/Grid2Section2.css
+++ b/frontend/src/Javascript_Pages/Public_Pages/WelcomePageElements/CSS/Grid2Section2.css
@@ -8,7 +8,7 @@
 }
 
 /* Styles for the content within each section */
-.section-content-unique2 {
+.section-content {
     max-width: 1000px;
     text-align: left; /* Left align text */
     color: white;
