--- a/frontend/src/Javascript_Pages/Public_Pages/WelcomePageElements/CSS/Grid2Section1.css
+++ b/frontend/src/Javascript_Pages/Public_Pages/WelcomePageElements/CSS/Grid2Section1.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center; /* Center content horizontally */
-    padding: 40px;
+    padding: 20px;
 }
   
 /* Styles for the content within each section */
@@ -12,7 +12,6 @@
     max-width: 800px;
     text-align: left; /* Left align text */
     color: white;
-    background-color: transparent; /* Transparent background color */
     padding: 40px;
     border-radius: 10px;
     transform: translateY(50px); /* Initial position for rising effect */
@@ -21,6 +20,7 @@
 }
   
 .text-and-graphic-container {
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between; /* Distribute space between text and graphic */
@@ -57,13 +57,13 @@
 }
 
 .auth-button-section1-unique3 {
-    border-radius: 8px;
+    border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.20);
     background: linear-gradient(180deg, rgba(61, 66, 68, 0.00) -40.91%, rgba(158, 170, 176, 0.62) 132.95%);
     backdrop-filter: blur(10px);
     color: white;
     padding: 10px 20px;
-    margin-right: 20px; /* Space between buttons */
+    margin-left: 50px; /* Space between buttons */
     cursor: pointer;
     font-size: 1rem;
     text-decoration: none;
@@ -98,6 +98,7 @@
 .title-transition-group {
     display: inline-block;
     position: relative;
+    color:rgb(97, 159, 209);
     height: 29px; /* Ensure it stays on the same line */
 }
 
@@ -173,13 +174,13 @@
 .logo-box {
     min-width: 200px;
     max-width: 200px;
-    height: 100px; /* Set a fixed height */
+    height: 95px; /* Set a fixed height */
     margin: 0 10px;
     padding: 10px;
     background: rgba(255, 255, 255, 0.01);
     box-shadow: 0px 20px 50px 0px rgba(255, 255, 255, 0.10) inset;
     backdrop-filter: blur(10px);
-    border-radius: 8px;
+    border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
